# c_amd_fan

./: CMakeLists.txt  amd_fan.cfg.example  c_amd_fan.c  compiling.sh  todo.txt
